--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+async-generator==1.10
+attrs==22.1.0
 autopep8==1.6.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2021.5.30
+certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.0.2
+colorama==0.4.5
+h11==0.13.0
 idna==3.2
+outcome==1.2.0
 pycodestyle==2.8.0
+pycparser==2.21
+PySocks==1.7.1
+python-dotenv==0.20.0
 requests==2.26.0
+selenium==4.4.3
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.2.1
 toml==0.10.2
+tqdm==4.64.0
+trio==0.21.0
+trio-websocket==0.9.2
 urllib3==1.26.6
+webdriver-manager==3.8.3
+wsproto==1.2.0
