--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,22 @@ certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.0.2
 colorama==0.4.5
+et-xmlfile==1.1.0
 h11==0.13.0
 idna==3.2
+numpy==1.23.2
+openpyxl==3.0.10
 outcome==1.2.0
+pandas==1.4.3
 pycodestyle==2.8.0
 pycparser==2.21
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.2.1
 requests==2.26.0
 selenium==4.4.3
+six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.2.1
